# FLAIR

./: .gitignore  README.md  lol.py
assets/: make_gifs (1).py
bite_acquisition/: .gitignore  CMakeLists.txt  README.md  environment.yml  package.xml
bite_acquisition/include/: controller.hpp
bite_acquisition/include/client_stubs/: BaseClientRpc.h
bite_acquisition/include/common/: version.h
bite_acquisition/include/messages/: Base.pb.h
bite_acquisition/launch/: franka.launch  kinova.launch
bite_acquisition/msg/: CartesianState.msg
bite_acquisition/scripts/: feeding_bot.py  flair.py  food_on_fork.py  head_perception.py  history.txt  horizontal_spoon.py  inference_class.py  pixel_selector.py  preference_planner.py  rs_ros.py  skill_library.py  utils.py  vision_utils.py  visualizer.py  wrist_controller.py
bite_acquisition/scripts/configs/: default.rviz  feeding.yaml
bite_acquisition/scripts/prompts/: ours.txt  preference_only.txt
bite_acquisition/scripts/prompts/identification/: prompt.txt
bite_acquisition/scripts/robot_controller/: base.py  franka_controller.py  kinova_controller.py
bite_acquisition/scripts/src/food_pos_ori_net/model/: minispanet.py  model_gauss_kpts.py  recenternet.py  resnet_dilated.py  resnet_dilated_multi.py
bite_acquisition/scripts/src/spaghetti_segmentation/: model.py
bite_acquisition/scripts/test/: test_acq_skills_pixel_selection.py  test_calibration.py  test_robot_configs.py  test_skewering.py  test_speed.py  test_srvs.py  test_transfer.py  test_wrist_configs.py
bite_acquisition/src/: controller.cpp
bite_acquisition/srv/: GripperCommand.srv  JointCommand.srv  JointWaypointsCommand.srv  PoseCommand.srv  PoseWaypointsCommand.srv  Segmentation.srv  TwistCommand.srv  VQA.srv
bite_acquisition/task_planning_tests/noodle_plates/: compile_results.py  gpt.py  swin_transformers.ipynb  thresholding.py  vapors.py  vapors_labels.txt
bite_acquisition/task_planning_tests/noodle_plates/gpt_prompt/: log.txt  prompt.py  prompt.txt
bite_acquisition/task_planning_tests/noodle_plates/param_tuning/thresholding/spaghetti/: predictions.txt
bite_acquisition/task_planning_tests/study_plates/: compile_results.py  gpt.py  swin_transformers.ipynb  thresholding.py
bite_acquisition/task_planning_tests/study_plates/gpt_prompts/dessert/: log.txt  prompt.py  prompt.txt
bite_acquisition/task_planning_tests/study_plates/gpt_prompts/fettuccine_chicken_broccoli/: log.txt  prompt.py  prompt.txt
bite_acquisition/task_planning_tests/study_plates/gpt_prompts/mashed_potato_sausage/: log.txt  prompt.py  prompt.txt
bite_acquisition/task_planning_tests/study_plates/gpt_prompts/oatmeal_strawberry/: log.txt  prompt.py  prompt.txt
bite_acquisition/task_planning_tests/study_plates/gpt_prompts/spaghetti_meatballs/: log.txt  prompt.py  prompt.txt
franka_description/: panda_arm.urdf  panda_arm_hand.urdf
franka_description/meshes/: new_base_link.stl
kortex_description/robots/: gen3_6dof.srdf  gen3_6dof_vision.urdf  gen3_6dof_vision_forque.urdf  gen3_6dof_vision_forque1.urdf  gen3_7dof_vision.urdf  gen3_robotiq_2f_85.xacro  (+1 more)
wrist_driver/: test_wrist.sh
wrist_driver/wrist_driver_interfaces/: CMakeLists.txt  package.xml
wrist_driver/wrist_driver_interfaces/msg/: SimpleJointAngleCommand.msg  WristState.msg
wrist_driver/wrist_driver_interfaces/srv/: SetWristMode.srv
wrist_driver/wrist_driver_ros/: CMakeLists.txt  package.xml
wrist_driver/wrist_driver_ros/include/: wrist_driver.hpp  wrist_driver_constants.hpp
wrist_driver/wrist_driver_ros/src/: getTorques.cpp  wrist_driver.cpp
wrist_driver/wrist_driver_ros/urdf/: feeding_utensil.urdf  feeding_utensil.xacro  roll_link_new2.stl
(+20 files in other folders)
