<?xml version="1.0"?>
<package format="2">
  <name>wrist_driver_interfaces</name>
  <version>0.0.0</version>
  <description>The wrist_driver_interfaces package</description>
  <maintainer email="jenamani@todo.todo">jenamani</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
